Revision history for Perl extension PGXN::API

0.3.3

0.3.2   2011-03-10T21:53:17
      - Updated to work with PGXN::Manager 0.10.0 output. In particular,
        "owners" are now known as "users" and "release_date" is now known as
        "date". The relevant methods and data have been chagned to reflect
        this change.

0.3.1 2011-03-10T00:28:36
      - Updated to work with PGXN::Manager 0.9.1 output.

0.3.0 2011-03-09T22:18:16
      - Updated to work with PGXN::Manager 0.9.0 output.

0.2.0   2011-03-03T01:09:42
      - No longer serve directory indexes.
      - Added tests for the router.
      - Serve distribution files with content-type application/zip.
      - Added `var/index.html`, placeholder for a root-level HTML file.

0.1.0   2011-03-02 23:58:41
      - Initial version.
      - Syncs to mirror.
      - Merges metadata to API doc root.
      - Has PSGI to serve static files from the doc root.