@@ -1,6 +1,9 @@
 Revision history for Perl extension PGXN::API
 
 0.3.3
+      - Added the "special_files" key to the distribution metadata file. It
+        includes paths to `README`, `META.json`, `Changes`, `Makefile`, and
+        other special files in the distribution.
 
 0.3.2   2011-03-10T21:53:17
       - Updated to work with PGXN::Manager 0.10.0 output. In particular,
